# instron_analysis_repo

./: README.md  pyproject.toml
.ipynb_checkpoints/: __init__-checkpoint.py
pkg demo/: Test metadata - Package demo.csv  package demo.html  package demo.ipynb
pkg demo/.ipynb_checkpoints/: package demo-checkpoint.ipynb
src/: property_calculator.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/instron_analysis/: full_plot.py  property_calculator.py  raw_data_formatter.py
src/instron_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
